// -----------------------------------------------------------------------------
// File: server.go
//
// This file implements the gRPC server for the UserService microservice. It defines
// the UserServer struct, which embeds the generated UnimplementedUserServiceServer
// from the protobuf code. The server provides method stubs for CreateUser, GetUser,
// UpdateUser, DeleteUser, and ListUsers, which are called by the API Gateway via gRPC.
//
// Syntax:
// - Uses Go's struct and method syntax to implement gRPC service methods.
// - Embeds the protobuf-generated server interface for compatibility.
// - Uses context for request handling and cancellation.
//
// Purpose:
// - Serves as the backend for user CRUD operations.
// - Handles creation, retrieval, updating, deletion, and listing of users.
// - Provides a contract for future business logic and database integration.
// -----------------------------------------------------------------------------

import (
	"context"
	pb "github.com/gibbyDev/go-microservices/proto/user"
	"google.golang.org/protobuf/types/known/emptypb"
)

type UserServer struct {
	pb.UnimplementedUserServiceServer
	// Add dependencies: repository, config, etc.
}

func NewUserServer() *UserServer {
	return &UserServer{}
}

func (s *UserServer) CreateUser(ctx context.Context, req *pb.CreateUserRequest) (*pb.CreateUserResponse, error) {
	// TODO: Implement create user logic
	user := &pb.User{Id: "1", Username: req.Username, Email: req.Email, Bio: req.Bio, AvatarUrl: req.AvatarUrl, CreatedAt: 0, UpdatedAt: 0}
	return &pb.CreateUserResponse{User: user}, nil
}

func (s *UserServer) GetUser(ctx context.Context, req *pb.GetUserRequest) (*pb.GetUserResponse, error) {
	// TODO: Implement get user logic
	user := &pb.User{Id: req.Id, Username: "user", Email: "user@example.com", Bio: "bio", AvatarUrl: "", CreatedAt: 0, UpdatedAt: 0}
	return &pb.GetUserResponse{User: user}, nil
}

func (s *UserServer) UpdateUser(ctx context.Context, req *pb.UpdateUserRequest) (*pb.UpdateUserResponse, error) {
	// TODO: Implement update user logic
	user := &pb.User{Id: req.Id, Username: req.Username, Email: req.Email, Bio: req.Bio, AvatarUrl: req.AvatarUrl, CreatedAt: 0, UpdatedAt: 0}
	return &pb.UpdateUserResponse{User: user}, nil
}

func (s *UserServer) DeleteUser(ctx context.Context, req *pb.DeleteUserRequest) (*emptypb.Empty, error) {
	// TODO: Implement delete user logic
	return &emptypb.Empty{}, nil
}

func (s *UserServer) ListUsers(ctx context.Context, req *pb.ListUsersRequest) (*pb.ListUsersResponse, error) {
	// TODO: Implement list users logic
	users := []*pb.User{}
	return &pb.ListUsersResponse{Users: users}, nil
}
package server

// TODO: Add gRPC server implementation for user service
// Example implementations:
// - UserServiceServer implementation
// - User profile management
// - User preferences and settings